--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Enhancement Suite - MAS/PAR/SEQ",
   "description": "speed up importing emails, send emails from client page, and other enhancements",
-  "version": "1.0918",
+  "version": "1.0919",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
@@ -48,6 +48,10 @@
     },
     {
       "js":["task_quick_notes.js"],
+      "matches":["https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?viewexist=*"]
+    },
+    {
+      "js":["task_auto_contact.js"],
       "matches":["https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?viewexist=*"]
     },
     {
