added quick archive, added tech map

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Enhancement Suite - MAS/PAR/SEQ",
   "description": "speed up importing emails, send emails from client page, and other enhancements",
-  "version": "1.0928",
+  "version": "1.0930",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
@@ -74,6 +74,12 @@
     },
     {
       "js": ["bulkImport.js"],
+      "matches": [
+        "https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?new=1&tid=IMS.CRT.TSK"
+      ]
+    },
+    {
+      "js": ["create_job_extras.js"],
       "matches": [
         "https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?new=1&tid=IMS.CRT.TSK"
       ]
