--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Enhancement Suite - MAS/PAR/SEQ",
   "description": "speed up importing emails, send emails from client page, and other enhancements",
-  "version": "1.0932",
+  "version": "1.0947",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
@@ -20,6 +20,10 @@
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
   },
+  "web_accessible_resources": [{
+    "matches": ["<all_urls>"],
+    "resources": ["techTable.js"]
+  }],
 
   "content_scripts": [
     {
@@ -45,13 +49,15 @@
     {
       "js": ["freezenotes.js"],
       "matches": [
-        "https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?viewexist=*"
+        "https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?viewexist=*",
+        "https://office.aroflo.com/ims/Site/Service/Quotes/index.cfm?viewexist=*"
       ]
     },
     {
       "js": ["invoices.js"],
       "matches": [
-        "https://office.aroflo.com/ims/Site/Service/invoicing/index.cfm?incoded*"
+        "https://office.aroflo.com/ims/Site/Service/invoicing/index.cfm?incoded*",
+        "https://office.aroflo.com/ims/Site/Service/invoicing/index.cfm?viewexist*"        
       ]
     },
     {
@@ -91,7 +97,13 @@
       ]
     },
     {
-      "js": ["create_job_extras.js"],
+      "js": ["create_job_fridgeCheck.js"],
+      "matches": [
+        "https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?new=1&tid=IMS.CRT.TSK"
+      ]
+    },
+    {
+      "js": ["create_job_techMap.js"],
       "matches": [
         "https://office.aroflo.com/ims/Site/Service/workrequest/index.cfm?new=1&tid=IMS.CRT.TSK"
       ]
