bringing github up to date with version 1.0961

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Enhancement Suite - MAS/PAR/SEQ",
   "description": "speed up importing emails, send emails from client page, and other enhancements",
-  "version": "1.0950",
+  "version": "1.0961",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
@@ -36,6 +36,10 @@
     },
     {
       "js": ["calendar2.js"],
+      "matches": ["https://office.aroflo.com/ims/Site/Calendar/*"]
+    },
+    {
+      "js": ["calendar_adaptive_view.js"],
       "matches": ["https://office.aroflo.com/ims/Site/Calendar/*"]
     },
     {
